# razorpayx-integration

./: .editorconfig  .eslintrc  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  constant.py  pyproject.toml
.github/workflows/: linters.yml  semantic-commits.yml
docs/: 1_connect_with_razorpayx.md  2_make_payout.md  3_bank_reconciliation_tool.md  4_faqs.md  FAQS.md  bank_reconciliation_tool.md  connect_with_razorpayx.md  make_payout.md
docs/accounting/: 1_fees_and_tax.md  2_payout_reversal.md
docs/payout/: 1_requirements.md  2_Authentication.md  3_make_payout.md  4_bulk_submit_without_payout.md  5_cancel_payout.md  6_setup_status_notification.md  7_payout_tips_and_notes.md  payout.md
docs/reconcile/: 1_sync_and_reconcile_transactions.md  3_bank_reconciliation_tool.md
docs/report/: 1_payout_status_report.md
docs/setup/: 1_setup_test_and_live_mode.md  2_connect_erpnext_with_razorpayx.md
razorpayx_integration/: __init__.py  constant.py  constants.py  hooks.py  install.py  modules.txt  patches.txt  setup.py  uninstall.py  utils.py
razorpayx_integration/config/: desktop.py  docs.py
razorpayx_integration/constants/: __init__.py  custom_fields.py  enums.py  payouts.py  property_setters.py  role.py  roles.py  workflows.py
razorpayx_integration/patches/: delete_old_custom_fields.py  delete_old_property_setters.py  mark_creation_of_je_on_reversal.py  set_default_payouts_from.py  set_pay_on_auto_submit.py  set_payment_transfer_method.py  update_integration_doctype.py
razorpayx_integration/payment_utils/: auth.py  (+1 more)
(+109 files in other folders)
