[project]
name = "razorpayx_integration"
authors = [
    { name = "Resilient Tech", email = "info@resilient.tech"}
]
description = "Automat Payments By RazorPayX API For Frappe Apps"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]


[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]

ignore = [
    "E501", # line too long
]

typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"